<resources>
    <string name="app_name">EirsAgentPoc</string>
    <string name="dashboard_title">Dashboard - Agent</string>
    <string name="assets_title">Manage Assets</string>
    <string name="business_title">Business</string>
    <string name="building_title">Buildings</string>
    <string name="tax_payer_title">Business Owner - Tax Payers</string>
    <string name="individuals_title">Individuals</string>
    <string name="companies_title">Companies</string>
    <string name="payment_title">Payment</string>
    <string name="no_business_all">No businesses yet</string>
    <string name="no_business_add">Add a name + </string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor</string>
    <string name="lorem_ipsum_medium">Lorem ipsum dolor sit amet, eu interdum curabitur magna et sed, sed lectus feugiat ultrices. Curae ultricies vestibulum, sit phasellus consequat, in mi laoreet nullam quam pede eu.</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, eu interdum curabitur magna et sed, sed lectus feugiat ultrices. Curae ultricies vestibulum, sit phasellus consequat, in mi laoreet nullam quam pede eu, tempus justo ad tortor nullam. Est et vel, suscipit in purus accumsan dis faucibus, adipiscing arcu venenatis orci sodales elit, non lobortis aenean pellentesque vestibulum consectetuer lectus, cras donec.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_business_success_message">Business Successfully Added</string>
    <string name="load_business_errors">Error While Loading Businesses</string>
    <string name="edit_business_title">Edit Business</string>
    <string name="add_business_title">Add New Business</string>
    <string name="business_name_hint">* Business Name </string>
    <string name="add_business_error">Could not add name, ensure all fields are filled</string>
    <string name="business_success_message">Business Successfully Added</string>
    <string name="empty_string_text">none</string>
    <string name="edit_business_error">Cannot Edit Business</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_regular">sans-serif-regular</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="sector_hint">Sector</string>
    <string name="sub_sector_hint">Sub Sector</string>
    <string name="lga_hint">LGA</string>
    <string name="category_hint">Category</string>
    <string name="operations_hint">Operations</string>
    <string name="structure_hint">Structure</string>
    <string name="edit_business_success">Business Edited Successfully</string>
    <string name="view_business">View Business</string>
    <string name="search_text">Search</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="first_name">* First Name</string>
    <string name="select_date">SELECT DATE</string>
</resources>
