<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="60dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/details_business_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="64dp"
                android:fontFamily="sans-serif"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/text_dark_200"
                tools:text="Business Name" />

            <TextView
                android:id="@+id/details_business_rin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp"
                android:fontFamily="@string/font_family_medium"
                android:textColor="@color/pale_red"
                android:textSize="14sp"
                tools:text="BUSINESS_RIN" />

        </RelativeLayout>

        <View
            android:layout_width="96dp"
            android:layout_height="1dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="12dp"
            android:background="@color/medium_green_600" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/drawable_details_content_bg"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/details_business_sector_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family_medium"
                android:text="@string/sector_hint"
                android:textAllCaps="false"
                android:textColor="@color/text_dark_300"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/details_business_sector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@string/font_family_light"
                android:lineSpacingExtra="2dp"
                android:textAllCaps="false"
                android:textColor="@color/text_dark_200"
                android:textSize="14sp"
                android:textStyle="normal"
                tools:text="@string/lorem_ipsum_short" />

            <TextView
                android:id="@+id/details_business_sub_sector_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family_medium"
                android:text="@string/sub_sector_hint"
                android:textAllCaps="false"
                android:textColor="@color/text_dark_300"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/details_business_sub_sector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@string/font_family_light"
                android:lineSpacingExtra="2dp"
                android:textAllCaps="false"
                android:textColor="@color/text_dark_200"
                android:textSize="14sp"
                android:textStyle="normal"
                tools:text="@string/lorem_ipsum_short" />
        </LinearLayout>

        <View
            android:layout_width="96dp"
            android:layout_height="0dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="12dp"
            android:background="@color/medium_green_600" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/drawable_details_content_bg"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family_medium"
                android:text="@string/lga_hint"
                android:textAllCaps="false"
                android:textColor="@color/text_dark_300"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/details_business_lga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@string/font_family_light"
                android:lineSpacingExtra="2dp"
                android:textAllCaps="false"
                android:textColor="@color/text_dark_200"
                android:textSize="14sp"
                android:textStyle="normal"
                tools:text="@string/lorem_ipsum_short" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family_medium"
                android:text="@string/category_hint"
                android:textAllCaps="false"
                android:textColor="@color/text_dark_300"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/details_business_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@string/font_family_light"
                android:lineSpacingExtra="2dp"
                android:textAllCaps="false"
                android:textColor="@color/text_dark_200"
                android:textSize="14sp"
                android:textStyle="normal"
                tools:text="@string/lorem_ipsum_short" />
        </LinearLayout>

        <View
            android:layout_width="96dp"
            android:layout_height="0dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:background="@color/medium_green_600"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/drawable_details_content_bg"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/details_business_operations_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family_medium"
                android:text="@string/operations_hint"
                android:textAllCaps="false"
                android:textColor="@color/text_dark_200"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/details_business_operations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/details_business_operations_hint"
                android:layout_marginTop="8dp"
                android:fontFamily="@string/font_family_light"
                android:lineSpacingExtra="2dp"
                android:textAllCaps="false"
                android:textColor="@color/text_dark_200"
                android:textSize="14sp"
                android:textStyle="normal"
                tools:text="@string/lorem_ipsum_short" />

            <TextView
                android:id="@+id/details_business_structure_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/details_business_operations_hint"
                android:fontFamily="@string/font_family_medium"
                android:gravity="end"
                android:text="@string/structure_hint"
                android:textAllCaps="false"
                android:textColor="@color/text_dark_200"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/details_business_structure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/details_business_structure_hint"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/details_business_operations"
                android:fontFamily="@string/font_family_light"
                android:gravity="end"
                android:lineSpacingExtra="2dp"
                android:textAllCaps="false"
                android:textColor="@color/text_dark_200"
                android:textSize="14sp"
                android:textStyle="normal"
                tools:text="@string/lorem_ipsum_short" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>