<com.vatebra.eirsagentpoc.util.ScrollChildSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/companyContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/companyLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/drawable_details_content_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family_medium"
                android:padding="8dp"
                android:text="Profile"
                android:textAllCaps="false"
                android:textColor="@color/pale_red"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/profile_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@string/font_family_light"
                android:lineSpacingExtra="2dp"
                android:padding="8dp"
                android:textAllCaps="false"
                android:textColor="@color/text_dark_200"
                android:textStyle="normal"
                tools:text="@string/lorem_ipsum_short" />

        </LinearLayout>

        <TextView
            android:id="@+id/paymentsHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/companyLL"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@string/font_family_medium"
            android:text="Attached Payments"
            android:textAllCaps="false"
            android:textColor="@color/pale_red"
            android:textStyle="normal" />

        <View
            android:id="@+id/seperator"
            android:layout_width="96dp"
            android:layout_height="1dp"
            android:layout_below="@id/paymentsHint"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="12dp"
            android:background="@color/medium_green_600" />

        <ListView
            android:id="@+id/assesment_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/seperator"
            android:layout_marginTop="10dp"
            tools:listitem="@layout/item_payments" />


    </RelativeLayout>

</com.vatebra.eirsagentpoc.util.ScrollChildSwipeRefreshLayout>
