<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@drawable/touch_feedback"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/list_item_padding">

    <CheckBox
        android:id="@+id/selectCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_toEndOf="@id/selectCheckbox"
        android:fontFamily="sans-serif"
        android:padding="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        tools:text="Vatebra" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/title"
        android:layout_below="@id/title"
        android:layout_gravity="center_vertical"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:lines="1"
        android:padding="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#8000"
        tools:text="@string/lorem_ipsum_medium" />

    <TextView
        android:id="@+id/bodyTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/title"
        android:layout_below="@id/subTitle"
        android:layout_gravity="center_vertical"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:lines="1"
        android:padding="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="#8000"
        android:textStyle="bold"
        tools:text="0701234567" />

    <TextView
        android:id="@+id/rinTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/title"
        android:layout_gravity="center_vertical"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        tools:text="@string/lorem_ipsum_short" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/bodyTitle"
        android:layout_gravity="end"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_family_regular"
            android:gravity="end"
            android:text="View Company"
            android:textAllCaps="false"
            android:textColor="@color/pale_red"
            android:textSize="12sp"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="4dp"
            android:tint="@color/pale_red"
            app:srcCompat="@drawable/ic_right_cheron" />
    </LinearLayout>
</RelativeLayout>