<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/companyContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/accountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:fontFamily="@string/font_family_medium"
        tools:text="Account Balance: N4000"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:textColor="@color/text_dark_300"
        android:textSize="16sp"
        android:textStyle="normal" />

    <LinearLayout
        android:id="@id/companyLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/accountText"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/drawable_details_content_bg"
        android:orientation="vertical"
        android:padding="24dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/taxpayer_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family_medium"
                android:text="Tax Payer"
                android:textAllCaps="false"
                android:textColor="@color/text_dark_300"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/taxpayerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/taxpayer_hint"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@string/font_family_light"
                android:lineSpacingExtra="2dp"
                android:textAllCaps="false"
                android:textColor="@color/text_dark_200"
                android:textSize="14sp"
                android:textStyle="normal"
                tools:text="@string/lorem_ipsum_short" />


            <TextView
                android:id="@+id/tin_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@string/font_family_medium"
                android:text="TIN"
                android:textAllCaps="false"
                android:textColor="@color/text_dark_300"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tinTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/tin_hint"
                android:layout_marginTop="8dp"
                android:fontFamily="@string/font_family_light"
                android:lineSpacingExtra="2dp"
                android:textAllCaps="false"
                android:textColor="@color/text_dark_200"
                android:textSize="14sp"
                android:textStyle="normal"
                tools:text="@string/lorem_ipsum_short" />


        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/paymentsHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/companyLL"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@string/font_family_medium"
        android:text="Bills"
        android:textAllCaps="false"
        android:textColor="@color/pale_red"
        android:textStyle="normal" />

    <ListView
        android:id="@+id/assesment_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/paymentsHint"
        android:layout_marginTop="10dp"
        tools:listitem="@layout/item_payments" />


</RelativeLayout>

